Corrected footer visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,13 +127,17 @@ p {
 
 
 .footer {
-    display: none;
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+.footer h4 {
     font-size: 20px;
+
+}
+
+.footer h4, .footer p{
+    display: none;
 }
